Development
	Fix menu item position change on popup menu due to previous change
	Move Open on popup menu, below the Play/Pause, Stop, Prev and Next block
	Fix bug #406 - compile error when new GTK and no libasound
	Fix video playback problems when loading a folder from playlist screen
	NULL check on retrieve_metadata_pool clear process
	Check for block devices better in gio mode
	Update the subtitle on the current playlist item, when dragging and dropping.
	Fix minor memory leak in drag and drop for subtitles
	Added .ssa as a subtitle extension to drag and drop
	Support drag and drop of subtitle files with .srt or .ass extension. 
	Make V (show/hide subtitles) work in fullscreen mode
	More work on making code compile with gseal enabled, still more to do
	Add configure flag --enable-gseal and start fixing code
	Code now compiles with -DGTK_DISABLE_DEPRECATED enabled, enabled by default on GTK 2.18 and higher
	Remove depreciated calls to gtk_window_set_policy
	Start fixing issues to prepare for GTK 3.0 (DEPRECIATED and GSEAL changes)
	Fix bug #391 - Change metadata timeout count from 10 to 50
	Fix bug #355 - Change stream name to only show last part of URL in playlist, tooltip shows full url
	Fix problem with mouse not disappearing when over letterboxing
	Fix bug #392 - the panel disappearing/reappearing on window maximize/restore
	Add some libs to the nautilus plugin compliation process
	Set default value for embedded fonts
	Fix bug #381 - Open does not activate on Enter in Open->Location
	Resize controls slightly in fullscreen mode
	Fullscreen controls in a floating widget
	When running mplayer disable pretty printing
	Fix bug #376 - Rework vdpau codec selection and deinterlace
	Fix minor memory leak when we have an invalid item to play
	When dontplaynext is set, request next item on playlist from plugin
	Add vaapi to list of supported vo's
	Add a couple of icons to the file menu
0.9.9.2
	Fix right click pause/play regression Bug #360